@@ -1,16 +1,17 @@
 {
-  "name": "S3",
-  "version": "0.2",
-  "description": "Browse and Upload files to Amazon's S3 in Chrome",
-  "browser_action": {
-    "default_icon": "assets/images/logo.png"
-  },
-  "background_page": "background.html",
-  "permissions": [
-    "tabs",
-    "http://s3.amazonaws.com/",
-    "http://*.s3.amazonaws.com/",
-    "https://s3.amazonaws.com/",
-    "https://*.s3.amazonaws.com/"
-  ]
+	"name": "S3Browser",
+	"version": "0.2",
+	"description": "Browse and Upload files to Amazon's S3 in Chrome. Based on anotherjesse's S3 extension",
+	"browser_action": {
+		"default_icon": "assets/images/logo.png"
+	},
+	"homepage_url": "http://www.flynsarmy.com",
+	"background_page": "background.html",
+	"permissions": [
+		"tabs",
+		"http://s3.amazonaws.com/",
+		"http://*.s3.amazonaws.com/",
+		"https://s3.amazonaws.com/",
+		"https://*.s3.amazonaws.com/"
+	]
 }
